--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,13 @@
 } */
 
 .search-form {
+  padding-left: 25%;
+  padding-right: 25%;
   padding-top: 50px;
   font-size: 1.5em;
 }
 .search-form input {
-  width: 90%;
+  width: 50%;
 }
 
 .update-form,
@@ -73,15 +75,24 @@
   padding-bottom: 50px;
 }
 
+.update-form,
+.create-form {
+  padding-right: 75px;
+  float: right;
+  text-align: left;
+  width: 30%;
+}
+
 .character-card {
   padding-top: 2em;
 }
 
-.create-form,
 .update-form {
-  float: right;
-  text-align: left;
-  width: 30%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #fff;
+  padding-right: 50px;
+  padding-left: 30px;
 }
 
 .character-container {
@@ -102,27 +113,115 @@
   top: 0px;
 }
 
-.image1 {
-  width: 200px;
-  height: auto;
-}
-
-.image2 {
-  width: 100px;
-  height: auto;
-}
-
 .pointer {
   cursor: pointer;
 }
 
-button {
+button, .button {
   background-color: #181818;
   color: #fff;
+  margin-top: 1em;
   cursor: pointer;
+  padding: 10px;
+  border-radius: 4px;
 }
 
-form, input, select {
+button:hover, .button:hover {
+  opacity: 1;
+  -webkit-animation: flash 1.5s;
+  animation: flash 1.5s;
+}
+@-webkit-keyframes flash {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes flash {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.form-control,
+input,
+select {
   background-color: #181818;
   color: #fff;
+}
+
+.image2 {
+  width: 150px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figure {
+  position: relative;
+  width: 200px;
+  height: 150px;
+  border-radius: 4px;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+figure img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  -webkit-transform: rotate(15deg) scale(1.4);
+  transform: rotate(15deg) scale(1.4);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+figure:hover img {
+  -webkit-transform: rotate(0) scale(1);
+  transform: rotate(0) scale(1);
+}
+
+figure::before {
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  content: "";
+  width: 50%;
+  height: 100%;
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
+}
+figure:hover::before {
+  -webkit-animation: shine 0.75s;
+  animation: shine 0.75s;
+}
+@-webkit-keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
 }
