--- a/src/App.css
+++ b/src/App.css
@@ -59,13 +59,12 @@
 } */
 
 .search-form {
-  padding-left: 25%;
-  padding-right: 25%;
   padding-top: 50px;
+  padding-left: 75px;
   font-size: 1.5em;
 }
 .search-form input {
-  width: 50%;
+  width: 25%;
 }
 
 .update-form,
@@ -83,16 +82,15 @@
   width: 30%;
 }
 
-.character-card {
-  padding-top: 2em;
-}
-
-.update-form {
+.update-form form, .create-form form {
   border-style: solid;
   border-width: 1px;
   border-color: #fff;
-  padding-right: 50px;
-  padding-left: 30px;
+  padding: 30px;
+}
+
+.character-card {
+  padding-top: 2em;
 }
 
 .character-container {
@@ -117,7 +115,8 @@
   cursor: pointer;
 }
 
-button, .button {
+button,
+.button {
   background-color: #181818;
   color: #fff;
   margin-top: 1em;
@@ -126,7 +125,8 @@ button, .button {
   border-radius: 4px;
 }
 
-button:hover, .button:hover {
+button:hover,
+.button:hover {
   opacity: 1;
   -webkit-animation: flash 1.5s;
   animation: flash 1.5s;
@@ -224,4 +224,63 @@ figure:hover::before {
   100% {
     left: 125%;
   }
+}
+
+.gryffindor {
+  background-color: #7f0909;
+  color: #ffc500;
+}
+
+.slytherin {
+  background-color: #0d6217;
+  color: #aaaaaa;
+}
+
+.hufflepuff {
+  background-color: #eee117;
+  color: #000000;
+}
+
+.ravenclaw {
+  background-color: #000a90;
+  color: #946b2d;
+}
+
+.page-laser-to-text {
+  position: relative;
+  overflow: hidden;
+  padding-left: 75px;
+}
+.page-laser-to-text canvas {
+  display: block;
+}
+.page-laser-to-text input {
+  position: absolute;
+  bottom: 50px;
+  left: 0;
+  right: 0;
+  display: block;
+  outline: none;
+  background-color: rgba(38, 50, 56, 0.2);
+  color: #ffffff;
+  border: none;
+  width: 50%;
+  min-width: 500px;
+  max-width: 100%;
+  margin: auto;
+  height: 60px;
+  line-height: 60px;
+  font-size: 40px;
+  padding: 0 20px;
+}
+.page-laser-to-text input:hover, .page-laser-to-text input:focus {
+  border: 1px solid rgba(38, 50, 56, 0.6);
+}
+.page-laser-to-text input::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.1);
+}
+
+#input {
+  margin-left: -1000px;
+  display: none;
 }
